# percolator

./: .gitignore  AUTO_ACCOUNT_CREATION_COMPLETE.md  BUILD_AND_DEPLOY.md  Cargo.toml  DASHBOARD_API_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEPLOY_BACKEND_ONLY.md  DEPLOY_NOW.md  DEPLOY_PRODUCTION.md  DEPLOY_QUICK_START.md  DEPLOY_TO_PRODUCTION.md  FRONTEND_QUICKSTART.md  FULL_ARCHITECTURE_IMPLEMENTATION.md  MANUAL_DEPLOY_STEPS.md  NEW_PROGRAMS_SETUP.md  PHANTOM_FIX.md  QUICK_API_REFERENCE.md  README.md  RENDER_COPY_PASTE.txt  RENDER_DEPLOY_STEPS.md  ROUTER_IMPLEMENTATION_COMPLETE.md  ROUTER_TRADING_GUIDE.md  TRADING_POC_STATUS.md  TROUBLESHOOTING.md  USER_TRADING_GUIDE.md  V0.1_TRADING_ENABLED.md  build-bpf.ps1  deploy-vanity-programs.ps1  deploy.sh  generate-addresses.ps1  hell -ExecutionPolicy Bypass -File .build-bpf.ps1  render-backend.yaml  render.yaml  router_deploy.json  slab_deploy.json
api/: HYPERLIQUID_WEBSOCKET.md  WEBSOCKET_IMPLEMENTATION.md  package-lock.json  package.json  test-reserve.json  tsconfig.json
api/src/: index.ts
crates/amm_model/: Cargo.toml
crates/model_safety/: Cargo.toml
crates/proofs/kani/: Cargo.toml
crates/proofs/kani/src/: adaptive_warmup.rs  amm.rs  lib.rs  liq_planner.rs  pnl_vesting.rs  portfolio.rs  venue_isolation.rs
frontend/: README.md  SETUP.md  next.config.ts  package-lock.json  package.json  setup-env.js
scripts/: .gitignore  SECURITY_IMPORTANT.md  generate-vanity.ts  get-sizes.ts  init-with-phantom.ts  initialize-router.ts  initialize-slab.ts  router-info.json  slab-account.json  tsconfig.json
(+47 files in other folders)
